--- a/docs/pipelines.mdx
+++ b/docs/pipelines.mdx
@@ -8,7 +8,9 @@ import { TopBanners } from "@site/src/components/TopBanners";
 <TopBanners />
 
 <p align="center">
-  <a href="#"><img src="/img/pipelines/header.png" alt="Pipelines Logo"></a>
+  <a href="#">
+    <img src="/img/pipelines/header.png" alt="Pipelines Logo" />
+  </a>
 </p>
 
 # Pipelines: UI-Agnostic OpenAI API Plugin Framework
@@ -34,15 +36,18 @@ Welcome to **Pipelines**, an [Open WebUI](https://github.com/open-webui) initiat
 ## 🔧 How It Works
 
 <p align="center">
-  <a href="/img/pipelines/workflow.png"><img src="/img/pipelines/workflow.png" alt="Pipelines Workflow"></a>
+  <a href="#">
+    <img src="/img/pipelines/workflow.png" alt="Pipelines Workflow" />
+  </a>
 </p>
 
 Integrating Pipelines with any OpenAI API-compatible UI client is simple. Launch your Pipelines instance and set the OpenAI URL on your client to the Pipelines URL. That's it! You're ready to leverage any Python library for your needs.
 
 ## ⚡ Quick Start with Docker
 
-> [!WARNING]
-> Pipelines are a plugin system with arbitrary code execution — **don't fetch random pipelines from sources you don't trust**.
+:::warning
+Pipelines are a plugin system with arbitrary code execution — **don't fetch random pipelines from sources you don't trust**.
+:::
 
 For a streamlined setup using Docker:
 
@@ -57,16 +62,18 @@ For a streamlined setup using Docker:
    - Navigate to the **Settings > Connections > OpenAI API** section in Open WebUI.
    - Set the API URL to `http://localhost:9099` and the API key to `0p3n-w3bu!`. Your pipelines should now be active.
 
-> [!NOTE]
-> If your Open WebUI is running in a Docker container, replace `localhost` with `host.docker.internal` in the API URL.
+:::info
+If your Open WebUI is running in a Docker container, replace `localhost` with `host.docker.internal` in the API URL.
+:::
 
 3. **Manage Configurations:**
 
    - In the admin panel, go to **Admin Settings > Pipelines tab**.
    - Select your desired pipeline and modify the valve values directly from the WebUI.
 
-> [!TIP]
-> If you are unable to connect, it is most likely a Docker networking issue. We encourage you to troubleshoot on your own and share your methods and solutions in the discussions forum.
+:::tip
+If you are unable to connect, it is most likely a Docker networking issue. We encourage you to troubleshoot on your own and share your methods and solutions in the discussions forum.
+:::
 
 If you need to install a custom pipeline with additional dependencies:
 
